--- a/ml-lab-1.ipynb
+++ b/ml-lab-1.ipynb
@@ -56,13 +56,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# conda environments:\n",
+      "#\n",
+      "base                     C:\\ProgramData\\Anaconda3\n",
+      "ENSF592                  C:\\Users\\feagm\\.conda\\envs\\ENSF592\n",
+      "ensf-ml               *  C:\\Users\\feagm\\.conda\\envs\\ensf-ml\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# run this cell to list conda environments\n",
     "!conda info --envs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
